--- a/index.html
+++ b/index.html
@@ -2,13 +2,49 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<title>Phoros Digital Public Assets</title>
+		<title>Index of /assets</title>
+		<style>
+			body {
+				font-family: monospace;
+				background: #fff;
+				margin: 2em;
+			}
+			h1 {
+				font-family: monospace;
+				font-size: 1.2em;
+				margin-bottom: 1em;
+				color: #800000; /* your maroon accent */
+			}
+			ol {
+				list-style-type: decimal;
+				padding-left: 2em;
+			}
+			li {
+				margin: 0.3em 0;
+				text-decoration-line: underline;
+			}
+			a {
+				color: #000;
+				text-decoration: none;
+			}
+			a:hover {
+				text-decoration: underline;
+				color: #800000;
+			}
+			.footer {
+				margin-top: 2em;
+				font-size: 0.85em;
+				color: #777;
+			}
+		</style>
 	</head>
-	<body style="font-family: Arial, sans-serif; padding: 2em">
-		<h2>Phoros Digital Assets</h2>
-		<ul>
+	<body>
+		<h1>Index of /assets</h1>
+		<ol>
 			<li><a href="/phoros_digital_logo.png">logo.png</a></li>
-			<!-- add new files here as needed -->
-		</ul>
+			<!-- Add more files here -->
+		</ol>
+
+		<div class="footer">Phoros Digital – Software Design &amp; Publishing</div>
 	</body>
 </html>
