source-name-change

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<body>
 		<h1>Index of /assets</h1>
 		<ol>
-			<li><a href="/phoros_digital_logo.png">logo.png</a></li>
+			<li><a href="/phoros_digital_logo.png">phoros_digital_logo.png</a></li>
 			<!-- Add more files here -->
 		</ol>
 
